--- a/angular.json
+++ b/angular.json
@@ -62,22 +62,27 @@
             "development": {
               "optimization": false,
               "extractLicenses": false,
-              "sourceMap": true
+              "sourceMap": true,
+              "fileReplacements": [
+                {
+                  "replace": "src/environments/environment.ts",
+                  "with": "src/environments/environment.development.ts"
+                }
+              ]
             }
           },
           "defaultConfiguration": "production"
         },
         "serve": {
           "builder": "@angular-devkit/build-angular:dev-server",
-          "options": {
-            "proxyConfig": "proxy.conf.json"
-          },
           "configurations": {
             "production": {
-              "buildTarget": "mc-site:build:production"
+              "buildTarget": "mc-site:build:production",
+              "proxyConfig": "src/proxy/proxy.prod.conf.json"
             },
             "development": {
-              "buildTarget": "mc-site:build:development"
+              "buildTarget": "mc-site:build:development",
+              "proxyConfig": "src/proxy/proxy.conf.json"
             }
           },
           "defaultConfiguration": "development"
