--- a/angular.json
+++ b/angular.json
@@ -77,12 +77,10 @@
           "builder": "@angular-devkit/build-angular:dev-server",
           "configurations": {
             "production": {
-              "buildTarget": "mc-site:build:production",
-              "proxyConfig": "src/proxy/proxy.prod.conf.json"
+              "buildTarget": "mc-site:build:production"
             },
             "development": {
-              "buildTarget": "mc-site:build:development",
-              "proxyConfig": "src/proxy/proxy.conf.json"
+              "buildTarget": "mc-site:build:development"
             }
           },
           "defaultConfiguration": "development"
